--- a/styles.css
+++ b/styles.css
@@ -35,3 +35,19 @@ html {
   float: left;
   border-radius: 0 0 3px 3px;
 }
+
+.key.black--key::after {
+  background-color: #1d1e22;
+  content: "";
+  position: absolute;
+  left: -18px;
+  width: 32px;
+  height: 100px;
+  border-radius: 0 0 3px 3px;
+}
+
+.logo {
+  width: 200px;
+  position: absolute;
+  top: 23px;
+}
